Fixes Login Button Vertical Alignment

--- a/material.less
+++ b/material.less
@@ -12,6 +12,15 @@
     background: #F5F5F5;
 }
 
+.Form--centered .Button {
+    margin: 0 auto;
+    text-align: center;
+    height: 50px;
+    font-size: 15px;
+    padding: 0px 0px;
+    height: 35px;
+}
+
 .App-header {
     padding: 8px;
     height: 52px;
